# Tiago_pro

./: .gitignore  .gitignore11  README.md
tiago_pro/share/allegro_hand_controller_configuration/: local_setup.dsv  local_setup.sh  package.dsv  package.xml
tiago_pro/share/allegro_hand_controller_configuration/config/: allegro_hand_chain_controller.yaml  allegro_hand_controller.yaml  allegro_hand_controller_libhand.yaml  allegro_hand_controller_pids.yaml  controller_manager_cfg.yaml  pid_controller_params.yaml
tiago_pro/share/allegro_hand_controller_configuration/launch/: allegro_hand_chain_controllers.launch.py  allegro_hand_controller.launch.py  allegro_hand_controller_libhand.launch.py  allegro_hand_controllers.launch.py  allegro_pid_controller.launch.py  joint_state_broadcaster.launch.py
tiago_pro/share/allegro_hand_description/: local_setup.sh  package.xml
tiago_pro/share/allegro_hand_description/config/: allegro_hand.rviz  allegro_motion.yaml  allegro_motion_planner.yaml
tiago_pro/share/allegro_hand_description/gazebo/: gazebo.urdf.xacro
tiago_pro/share/allegro_hand_description/launch/: allegro_hand.launch.py  allegro_libhand.launch.py  play_motion2.launch.py  robot_state_publisher.launch.py  show.launch.py
tiago_pro/share/allegro_hand_description/robots/: palm_hand_test.urdf.xacro
tiago_pro/share/allegro_hand_description/ros2_control/: ros2_control.urdf.xacro
tiago_pro/share/allegro_hand_description/urdf/: allegro_fingers.urdf.xacro  allegro_fingers_pids.urdf.xacro  allegro_hand.ros2_control.xacro  allegro_hand.transmission.xacro  allegro_hand.urdf.xacro  allegro_palm.urdf.xacro
tiago_pro/share/attention_manager/: local_setup.dsv  local_setup.sh  package.dsv  package.xml
tiago_pro/share/attention_manager/config/: 00-defaults.yml
tiago_pro/share/attention_manager/launch/: attention_manager.launch.py  attention_manager_with_args.launch.py
tiago_pro/share/attention_manager/module/: attention_manager_module.yaml
tiago_pro/share/attention_manager_msgs/: local_setup.dsv  local_setup.sh  package.dsv  package.xml
tiago_pro/share/attention_manager_msgs/srv/: SetPolicy.idl  SetPolicy_Request.msg
tiago_pro/share/audio_common_bringup/: local_setup.dsv  local_setup.sh  package.dsv  package.xml
tiago_pro/share/audio_common_bringup/launch/: audio_capture.launch.py  audio_play.launch.py
tiago_pro/share/audio_common_bringup/module/: audio_common_bringup_modules.yaml
tiago_pro/share/chatbot_rasa/: package.xml
tiago_pro/share/chatbot_rasa/config/: 00-defaults.yml  endpoints.yml
tiago_pro/share/chatbot_rasa/launch/: chatbot_rasa.launch.py  chatbot_rasa_with_args.launch.py
tiago_pro/share/chatbot_rasa/module/: chatbot_rasa_module.yaml
tiago_pro/share/chatbot_rasa_default_models_common/: package.xml
tiago_pro/share/chatbot_rasa_default_models_common/actions/: action_change_volume.py  action_check_battery.py  action_check_internet.py  action_default_fallback.py  action_get_ip.py  action_get_languages.py  action_get_time.py  action_get_weather.py  action_is_charging.py  action_out_of_scope.py  action_present_content.py  action_start_emotion_recognition.py  action_stop_emotion_recognition.py
tiago_pro/share/chatbot_rasa_default_models_tiago_pro_en_us/: local_setup.dsv  local_setup.sh  package.dsv  package.xml
tiago_pro/share/chatbot_rasa_default_models_tiago_pro_en_us/config/: chatbot_rasa_model_descriptor.yml
tiago_pro/share/chatbot_rasa_default_models_tiago_pro_en_us/locales/: actions_i8n.yml
tiago_pro/share/collision_aware_joint_trajectory_wrapper/: local_setup.dsv  local_setup.sh  package.dsv  package.xml
tiago_pro/share/communication_hub/: local_setup.dsv  local_setup.sh  package.dsv  package.xml
tiago_pro/share/communication_hub/config/: 00-defaults.yml  default_markup_libraries.json
tiago_pro/share/communication_hub/launch/: communication_hub.launch.py
tiago_pro/share/communication_hub/module/: communication_hub_module.yml
tiago_pro/share/cyclone_dev_cfg/: local_setup.dsv  local_setup.sh  package.dsv  package.xml
tiago_pro/share/cyclone_dev_cfg/config/: cyclone_config.xml
tiago_pro/share/cyclone_dev_cfg/environment/: cyclone_dev_cfg.sh
tiago_pro/share/dll2d/: dll2dConfig.cmake  dll2dConfigVersion.cmake  dll2dTargets-none.cmake  dll2dTargets.cmake  package.xml
tiago_pro/share/dlo_core/: dlo_coreConfig.cmake  dlo_coreTargets-none.cmake  dlo_coreTargets.cmake  package.xml
tiago_pro/share/dlo_ros/: local_setup.dsv  local_setup.sh  package.dsv  package.xml
tiago_pro/share/expressive_eyes/: local_setup.dsv  local_setup.sh  package.dsv  package.xml
tiago_pro/share/gaze_manager/: local_setup.dsv  local_setup.sh  package.dsv  package.xml
tiago_pro/share/gravity_compensation_controller2/: gravity_compensation_plugin.xml  local_setup.dsv  local_setup.sh  package.dsv  package.xml
tiago_pro/share/hokuyo_laser_cfg/: local_setup.dsv  local_setup.sh  package.dsv  package.xml
tiago_pro/share/i18n_manager/: local_setup.dsv  local_setup.sh  package.dsv  package.xml
tiago_pro/share/ncl_rosbag/: local_setup.dsv  local_setup.sh  package.dsv  package.xml
tiago_pro/share/omni_drive_controller/: local_setup.dsv  local_setup.sh  omni_drive_plugin.xml  package.dsv  package.xml
tiago_pro/share/pal_common_msgs/: local_setup.dsv  local_setup.sh  package.dsv  package.xml
tiago_pro/share/pal_connection_cli/: package.xml
tiago_pro/share/pal_deploy/: package.xml
tiago_pro/share/pal_gazebo_worlds_private/: local_setup.dsv  local_setup.sh  package.dsv  package.xml
tiago_pro/share/pal_laser_filters/: local_setup.dsv  local_setup.sh  package.dsv  package.xml  pal_laser_filters_plugins.xml
tiago_pro/share/pal_metapkg_core/: local_setup.dsv  local_setup.sh  package.dsv  package.xml
tiago_pro/share/pal_metapkg_development/: local_setup.dsv  local_setup.sh  package.dsv  package.xml
tiago_pro/share/pal_metapkg_development_interactive_robot/: local_setup.dsv  local_setup.sh  package.dsv  package.xml
tiago_pro/share/pal_metapkg_development_tiago_pro/: local_setup.dsv  local_setup.sh  package.dsv  package.xml
(+1154 files in other folders)
