<?xml version="1.0"?>
<package format="3">
    <name>allegro_hand_description</name>
    <version>1.4.0</version>
    <description>Allegro hand models.</description>
    <maintainer email="felix.duvallet@epfl.ch">Felix Duvallet</maintainer>
    <maintainer email="aina.irisarri@pal-robotics.com">Aina Irisarri</maintainer>
    <license>Apache License 2.0</license>

    <buildtool_depend>ament_cmake_auto</buildtool_depend>
    <exec_depend>xacro</exec_depend>
    <exec_depend>allegro_hand_controller_configuration</exec_depend>
    <exec_depend>pal_gazebo_plugins</exec_depend>
    <exec_depend>gazebo_plugins</exec_depend>
    <exec_depend>ros2_controllers</exec_depend>
    <exec_depend>play_motion2_msgs</exec_depend>
    <exec_depend>play_motion2</exec_depend>
    <exec_depend condition="$PAL_DISTRO > 0">xela_uskin_sensor</exec_depend>

    <test_depend>play_motion2_msgs</test_depend>
    <test_depend>play_motion2</test_depend>
    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
