<?xml version="1.0"?>
<package format="3">
  <name>gaze_manager</name>
  <version>2.2.0</version>
  <description>The gaze_manager package</description>
  <maintainer email="lorenzo.ferrini@pal-robotics.com">Luka Juricic</maintainer>
  <license>PAL Robotics S.L.</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <build_depend>pal_module_cmake</build_depend>

  <exec_depend>launch_pal</exec_depend>

  <depend>control_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>interactive_markers</depend>
  <depend>lifecycle_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>std_srvs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>visualization_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gmock</test_depend>

  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>
