<?xml version="1.0"?>
<package format="3">
  <name>gravity_compensation_controller2</name>
  <version>1.3.0</version>
  <description>Gravity compensation controller based in RBDL</description>
  <maintainer email="adria.roig@pal-robotics.com">Adrià Roig</maintainer>
  <maintainer email="sai.kishor@pal-robotics.com">Sai Kishor</maintainer>
  <maintainer email="narcis.miguel@pal-robotics.com">Narcis Miguel</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>eigen3_cmake_module</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>controller_interface</depend>
  <depend>rbdl_vendor</depend>
  <depend>generate_parameter_library</depend>
  <depend>urdf</depend>

  <build_depend>pluginlib</build_depend>
  <build_depend>eigen</build_depend>

  <buildtool_export_depend>eigen3_cmake_module</buildtool_export_depend>
  <build_export_depend>eigen</build_export_depend>

  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>controller_manager</test_depend>
  <test_depend>hardware_interface_testing</test_depend>
  <test_depend>ros2_control_test_assets</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
