<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hokuyo_laser_cfg</name>
  <version>0.1.0</version>
  <description>Hokuyo Laser module and configurations for PAL robots</description>
  <maintainer email="antonio.brandi@pal-robotics.com">Antonio Brandi</maintainer>
  <license>PAL Robotics S.L.</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <build_depend>pal_module_cmake</build_depend>
  <build_depend>pal_configuration_cmake</build_depend>

  <exec_depend>urg_node</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
