<?xml version="1.0"?>
<package format="3">
  <name>ncl_rosbag</name>
  <version>4.4.0</version>
  <description>The ncl_rosbag package</description>

  <maintainer email="jose.garcia@pal-robotics.com">Jose Carlos Garcia</maintainer>
  <author email="jose.garcia@pal-robotics.com">Jose Carlos Garcia</author>

  <license>Proprietary</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  
  <depend>message_filters</depend>
  <depend>rosbag2_cpp</depend>

  <exec_depend>rosbag2_storage_default_plugins</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>geometry_msgs</test_depend>
  <test_depend>nav_msgs</test_depend>
  <test_depend>sensor_msgs</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
