<?xml version="1.0"?>
<package format="3">
  <name>pal_connection_cli</name>
  <version>0.1.0</version>

  <description>PAL Connection CLI</description>
  <maintainer email="oscar.martinez@pal-robotics.com">Oscar Martinez</maintainer>
  <license>PAL Robotics S.L.</license>

  <exec_depend>cyclone_dev_cfg</exec_depend>
  <exec_depend>palcli</exec_depend>
  <exec_depend>python3-icmplib</exec_depend>
  <exec_depend>netcat</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_xmllint</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
