<?xml version="1.0"?>
<package format="3">
  <name>pal_laser_filters</name>
  <version>1.2.0</version>
  <description>The pal_laser_filters package implements the PAL laser filters </description>
  <author email="jose.garcia@pal-robotics.com">Jose Carlos Garcia Moreno</author>
  <maintainer email="jose.garcia@pal-robotics.com">Jose Carlos Garcia Moreno</maintainer>
  
  <license>Propietary</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <build_depend>pal_configuration_cmake</build_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>eigen</depend>
  <depend>nav2_util</depend>
  <depend>sensor_msgs</depend>
  <depend>message_filters</depend>
  <depend>filters</depend>
  <depend>pluginlib</depend>
  <depend>laser_geometry</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>nlohmann-json-dev</depend>

  <exec_depend>laser_filters</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
