<?xml version="1.0"?>
<package format="3">
  <name>pal_metapkg_development</name>
  <version>3.1.1</version>
  <description>The pal_metapkg_development package</description>

  <maintainer email="david.terkuile@pal-robotics.com">David ter Kuile</maintainer>

  <license>Proprietary</license>

  <author email="david.terkuile@pal-robotics.com">David ter Kuile</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>pal_metapkg_core</exec_depend>

  <exec_depend>git</exec_depend>

  <exec_depend>mesa-utils</exec_depend>
  <exec_depend>terminator</exec_depend>

  <exec_depend>desktop_full</exec_depend>
  <!-- Installs C++ Compiler g++-->
  <exec_depend>g++-static</exec_depend>

  <exec_depend>pal_deploy</exec_depend>

  <exec_depend>plotjuggler_ros</exec_depend>

  <exec_depend>rqt_reconfigure</exec_depend>

  <!-- Cyclone packages -->
  <exec_depend>cyclone_dev_cfg</exec_depend>
  <exec_depend>pal_connection_cli</exec_depend>

  <!-- For having headers -->
  <build_export_depend>pal_metapkg_core</build_export_depend>
  <build_export_depend>pal_module_cmake</build_export_depend>

  <build_export_depend>controller_manager_msgs</build_export_depend>
  <build_export_depend>gazebo_msgs</build_export_depend>
  <build_export_depend>pal_common_msgs</build_export_depend>
  <build_export_depend>pal_device_msgs</build_export_depend>
  <build_export_depend>pal_statistics_msgs</build_export_depend>
  <build_export_depend>play_motion2_msgs</build_export_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
