<?xml version="1.0"?>
<package format="3">
  <name>pal_metapkg_development_interactive_robot</name>
  <version>1.2.0</version>
  <description>The pal_metapkg_development_interactive_robot package</description>
  <maintainer email="severin.lemaignan@pal-robotics.com">Séverin Lemaignan</maintainer>
  <license>PAL Robotics S.L.</license>
  <author email="severin.lemaignan@pal-robotics.com">Séverin Lemaignan</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>pal_module_cmake</build_depend>

  <exec_depend>pal_metapkg_ros4hri</exec_depend>
  <exec_depend>pal_metapkg_speech_processing</exec_depend>
  <exec_depend>audio_common_bringup</exec_depend>

  <exec_depend>ui_server</exec_depend>
  <exec_depend>interaction_sim</exec_depend>
  <exec_depend>rpk</exec_depend>
  <exec_depend>rpk_runtime</exec_depend>

  <exec_depend>gaze_manager</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
